feat: add certificate duration in cert renewal schedule
