# src/CertManager/Features/CertificateRenewal/CertificateRenewalScheduleModel.cs
@@ -1,8 +1,9 @@
 namespace CertManager.Features.CertificateRenewal;
 
-public class CertificateRenewalScheduleModel {
+public class CertificateRenewalScheduleModel
+{
 	public Guid SubscriptionId { get; init; }
-	public required string CertificateCommonName { get; init; }
+	public required TimeSpan CertificateDuration { get; init; }
 	public required string CertificateSubject { get; init; }
 	public DateTime ScheduledRenewalTime { get; init; }
 	public required Guid DestinationCertificateId { get; init; }
